--- a/Hotel_Booking_Analysis.ipynb
+++ b/Hotel_Booking_Analysis.ipynb
@@ -2753,6 +2753,10 @@
         "**10. Average lead time for resort hotel is high.**\n",
         "\n",
         "**11. If guests have to stay more than 5 days they prefer resort hotel.**"
+        "\n",
+        "**12. City hotel is a better choice to spend small vacation with family and for job related work.**"
+        "\n",
+        "**13. Resort hotel is a better choice to spend vacation with family.**"
       ],
       "metadata": {
         "id": "LD5DY89POlJu"
